# worktrace

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/agents/: spec-red-team.md
.github/workflows/: ci.yml
spec/: 1-1-project-scaffolding.md  1-2-workspace-context-schema.md  1-5-mcp-server-all-6-tools.md
spec/epic-1-project-setup/1-1-project-scaffolding/: agent-prompt.md  drift.md  plan.md  tasks.md
spec/epic-1-project-setup/1-3-sqlite-database-layer/: 1-3-sqlite-database-layer.md
spec/epic-1-project-setup/1-4-config-and-workspace-resolution/: 1-4-config-and-workspace-resolution.md
spec/epic-1-project-setup/1-6-cli-init-and-status/: 1-6-cli-init-and-status.md
