[project]
name = "worktrace"
version = "0.1.0"
description = "Persistent workspace memory server for coding agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.4.2,<4.0",
    "typer[all]>=0.26.7,<1.0",
    "pydantic>=2.13.4,<3.0",
    "sqlmodel>=0.0.38,<1.0",
    "rich>=15.0.0,<16.0",
    "platformdirs>=4.10.0,<5.0",
]

[project.scripts]
worktrace = "worktrace.cli:app"

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10.0",
    "pytest-mock>=3.14",
    "ruff>=0.15.16",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
